test/e2e/testdata/kthena-router/LLM-Mock-ds7b.yaml
# This example shows how to deploy a DS7B model server.
# The DS7B server will provide inference services for the DS7B model.
#
# NOTE: Update the image to the correct DS7B model image once it's available.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepseek-r1-7b
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deepseek-r1-7b
  template:
    metadata:
      labels:
        app: deepseek-r1-7b
    spec:
      containers:
        - name: llm-engine
          image: ghcr.io/yaozengzeng/vllm-mock:latest
          imagePullPolicy: IfNotPresent
          env:
            # specify the model name to mock
            - name: MODEL_NAME
              value: "deepseek-ai/DeepSeek-R1-Distill-Qwen-7B"
          command:
            - python3
            - app.py
