test/e2e/testdata/kthena-router/ModelRouteWithGlobalRateLimit.yaml
apiVersion: networking.serving.volcano.sh/v1alpha1
kind: ModelRoute
metadata:
  name: deepseek-global-rate-limit
  namespace: default
spec:
  modelName: "deepseek-r1-with-global-rate-limit"
  rules:
  - name: "default"
    targetModels:
    - modelServerName: "deepseek-r1-1-5b"
  # This configuration applies to all rules in this ModelRoute
  # - 10 input tokens per minute to be convenient to test
  rateLimit:
    inputTokensPerUnit: 10
    outputTokensPerUnit: 5000
    unit: minute
    global:
      redis:
        address: "redis-server.kthena-system.svc.cluster.local:6379"
